--- a/setup/Swix/Microsoft.NuGet.Build.Tasks.Setup/Microsoft.NuGet.Build.Tasks.Setup.csproj
+++ b/setup/Swix/Microsoft.NuGet.Build.Tasks.Setup/Microsoft.NuGet.Build.Tasks.Setup.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>	
     <SwrProperty Include="MSBuildProjectDirectory=$(MSBuildProjectDirectory)" />	
     <SwrProperty Include="VsixVersion=$(Version)" />	
+    <SwrProperty Include="ArtifactsBinDir=$(ArtifactsBinDir)" />	
+    <SwrProperty Include="Configuration=$(Configuration)" />	
   </ItemGroup>	
 
 
