--- a/setup/Swix/Microsoft.NuGet.Build.Tasks.Setup/Microsoft.NuGet.Build.Tasks.Setup.csproj
+++ b/setup/Swix/Microsoft.NuGet.Build.Tasks.Setup/Microsoft.NuGet.Build.Tasks.Setup.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>	
     <SwrProperty Include="MSBuildProjectDirectory=$(MSBuildProjectDirectory)" />	
-    <SwrProperty Include="VsixVersion=$(Version)" />	
+    <SwrProperty Include="VsixVersion=$(VsixVersion)" />	
     <SwrProperty Include="ArtifactsBinDir=$(ArtifactsBinDir)" />	
     <SwrProperty Include="Configuration=$(Configuration)" />	
   </ItemGroup>	
